--- a/aiko.ipynb
+++ b/aiko.ipynb
@@ -20,7 +20,7 @@
     "#import plotly.express as px\n",
     "#% matplotlib inline\n",
     "\n",
-    "df = pd.read_csv('songs_normalize.csv')"
+    "df = pd.read_csv('data/spotify_dataset.csv')"
    ]
   },
   {
