--- a/similarityMORITZ.ipynb
+++ b/similarityMORITZ.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,13 +13,14 @@
     "df = pd.read_csv('data/spotify_dataset.csv')\n",
     "\n",
     "# Preprocess the dataset\n",
+    "# Performing a normalization on the tempo and energy values so that different scaling has no influence\n",
     "df['tempo'] = (df['tempo'] - df['tempo'].mean()) / df['tempo'].std()\n",
     "df['energy'] = (df['energy'] - df['energy'].mean()) / df['energy'].std()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,41 +51,60 @@
     "    # Return the top 5 most similar songs\n",
     "    top_5_similar_songs = sorted_df.iloc[1:6]\n",
     "\n",
-    "    return top_5_similar_songs[['song', 'tempo', 'energy', 'genre']]\n"
+    "    return top_5_similar_songs[['song', 'artist', 'genre']]\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def similarity_search():\n",
+    "    print(\"Welcome to Similarity Search:\\nInsert a song name in the input window, we will find you the five most similar songs to it.\\n\")\n",
+    "    \n",
+    "    while True:\n",
+    "        # Get song name from user input\n",
+    "        song_name = input(\"Enter the name of the song: \")\n",
+    "        result = df[df['song'] == song_name]\n",
+    "        if not result.empty:\n",
+    "            break\n",
+    "        else:\n",
+    "            print(\"Your song is apparently not in the dataset. Try a valid song title.\\n\")\n",
+    "\n",
+    "    \n",
+    "    result = find_similar_songs(song_name)\n",
+    "    print(\"Your five most similar songs are:\\n{}\\n\\nHave fun listening!\".format(result))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
-     "ename": "KeyError",
-     "evalue": "'song_name'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "File \u001b[0;32m/opt/miniconda3/envs/scipy/lib/python3.11/site-packages/pandas/core/indexes/base.py:3652\u001b[0m, in \u001b[0;36mIndex.get_loc\u001b[0;34m(self, key)\u001b[0m\n\u001b[1;32m   3651\u001b[0m \u001b[39mtry\u001b[39;00m:\n\u001b[0;32m-> 3652\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_engine\u001b[39m.\u001b[39;49mget_loc(casted_key)\n\u001b[1;32m   3653\u001b[0m \u001b[39mexcept\u001b[39;00m \u001b[39mKeyError\u001b[39;00m \u001b[39mas\u001b[39;00m err:\n",
-      "File \u001b[0;32m/opt/miniconda3/envs/scipy/lib/python3.11/site-packages/pandas/_libs/index.pyx:147\u001b[0m, in \u001b[0;36mpandas._libs.index.IndexEngine.get_loc\u001b[0;34m()\u001b[0m\n",
-      "File \u001b[0;32m/opt/miniconda3/envs/scipy/lib/python3.11/site-packages/pandas/_libs/index.pyx:176\u001b[0m, in \u001b[0;36mpandas._libs.index.IndexEngine.get_loc\u001b[0;34m()\u001b[0m\n",
-      "File \u001b[0;32mpandas/_libs/hashtable_class_helper.pxi:7080\u001b[0m, in \u001b[0;36mpandas._libs.hashtable.PyObjectHashTable.get_item\u001b[0;34m()\u001b[0m\n",
-      "File \u001b[0;32mpandas/_libs/hashtable_class_helper.pxi:7088\u001b[0m, in \u001b[0;36mpandas._libs.hashtable.PyObjectHashTable.get_item\u001b[0;34m()\u001b[0m\n",
-      "\u001b[0;31mKeyError\u001b[0m: 'song_name'",
-      "\nThe above exception was the direct cause of the following exception:\n",
-      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[8], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m song_name \u001b[39m=\u001b[39m \u001b[39m\"\u001b[39m\u001b[39mBreathe\u001b[39m\u001b[39m\"\u001b[39m\n\u001b[0;32m----> 2\u001b[0m result \u001b[39m=\u001b[39m find_similar_songs(song_name)\n\u001b[1;32m      3\u001b[0m \u001b[39mprint\u001b[39m(result)\n",
-      "Cell \u001b[0;32mIn[5], line 3\u001b[0m, in \u001b[0;36mfind_similar_songs\u001b[0;34m(song_name)\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mfind_similar_songs\u001b[39m(song_name):\n\u001b[1;32m      2\u001b[0m     \u001b[39m# Find the song from the dataset\u001b[39;00m\n\u001b[0;32m----> 3\u001b[0m     song \u001b[39m=\u001b[39m df\u001b[39m.\u001b[39mloc[df[\u001b[39m'\u001b[39;49m\u001b[39msong_name\u001b[39;49m\u001b[39m'\u001b[39;49m] \u001b[39m==\u001b[39m song_name]\u001b[39m.\u001b[39miloc[\u001b[39m0\u001b[39m]\n\u001b[1;32m      5\u001b[0m     \u001b[39m# Calculate similarity with all other songs in the dataset\u001b[39;00m\n\u001b[1;32m      6\u001b[0m     df[\u001b[39m'\u001b[39m\u001b[39msimilarity\u001b[39m\u001b[39m'\u001b[39m] \u001b[39m=\u001b[39m df\u001b[39m.\u001b[39mapply(\u001b[39mlambda\u001b[39;00m row: calculate_similarity(row, song), axis\u001b[39m=\u001b[39m\u001b[39m1\u001b[39m)\n",
-      "File \u001b[0;32m/opt/miniconda3/envs/scipy/lib/python3.11/site-packages/pandas/core/frame.py:3761\u001b[0m, in \u001b[0;36mDataFrame.__getitem__\u001b[0;34m(self, key)\u001b[0m\n\u001b[1;32m   3759\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mcolumns\u001b[39m.\u001b[39mnlevels \u001b[39m>\u001b[39m \u001b[39m1\u001b[39m:\n\u001b[1;32m   3760\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_getitem_multilevel(key)\n\u001b[0;32m-> 3761\u001b[0m indexer \u001b[39m=\u001b[39m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mcolumns\u001b[39m.\u001b[39;49mget_loc(key)\n\u001b[1;32m   3762\u001b[0m \u001b[39mif\u001b[39;00m is_integer(indexer):\n\u001b[1;32m   3763\u001b[0m     indexer \u001b[39m=\u001b[39m [indexer]\n",
-      "File \u001b[0;32m/opt/miniconda3/envs/scipy/lib/python3.11/site-packages/pandas/core/indexes/base.py:3654\u001b[0m, in \u001b[0;36mIndex.get_loc\u001b[0;34m(self, key)\u001b[0m\n\u001b[1;32m   3652\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_engine\u001b[39m.\u001b[39mget_loc(casted_key)\n\u001b[1;32m   3653\u001b[0m \u001b[39mexcept\u001b[39;00m \u001b[39mKeyError\u001b[39;00m \u001b[39mas\u001b[39;00m err:\n\u001b[0;32m-> 3654\u001b[0m     \u001b[39mraise\u001b[39;00m \u001b[39mKeyError\u001b[39;00m(key) \u001b[39mfrom\u001b[39;00m \u001b[39merr\u001b[39;00m\n\u001b[1;32m   3655\u001b[0m \u001b[39mexcept\u001b[39;00m \u001b[39mTypeError\u001b[39;00m:\n\u001b[1;32m   3656\u001b[0m     \u001b[39m# If we have a listlike key, _check_indexing_error will raise\u001b[39;00m\n\u001b[1;32m   3657\u001b[0m     \u001b[39m#  InvalidIndexError. Otherwise we fall through and re-raise\u001b[39;00m\n\u001b[1;32m   3658\u001b[0m     \u001b[39m#  the TypeError.\u001b[39;00m\n\u001b[1;32m   3659\u001b[0m     \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_check_indexing_error(key)\n",
-      "\u001b[0;31mKeyError\u001b[0m: 'song_name'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Welcome to Similarity Search:\n",
+      "Insert a song name in the input window, we will find you the five most similar songs to it.\n",
+      "\n",
+      "Your song is apparently not in the dataset. Try a valid song title.\n",
+      "\n",
+      "Your five most similar songs are:\n",
+      "                            song         artist genre\n",
+      "479              My Happy Ending  Avril Lavigne   pop\n",
+      "12                    Freestyler   Bomfunk MC's   pop\n",
+      "747                   Girlfriend  Avril Lavigne   pop\n",
+      "86              It's Gonna Be Me         *NSYNC   pop\n",
+      "1392  Here's to Never Growing Up  Avril Lavigne   pop\n",
+      "\n",
+      "Have fun listening!\n"
      ]
     }
    ],
    "source": [
-    "song_name = \"Breathe\"\n",
-    "result = find_similar_songs(song_name)\n",
-    "print(result)\n"
+    "similarity_search()\n"
    ]
   }
  ],
