--- a/Spotify Analysis.ipynb
+++ b/Spotify Analysis.ipynb
@@ -1303,13 +1303,13 @@
     "plt.plot(sorted_df['popularity'], sorted_df['loudness'], color = 'purple')\n",
     "plt.title(\"Loudness\", fontsize=10)\n",
     "\n",
-    "#plot speechiness\n",
+    "#plot energy\n",
     "plt.subplot(3,1,3)\n",
-    "plt.plot(sorted_df['popularity'], sorted_df['speechiness'], color = 'yellow')\n",
-    "plt.title(\"Speechiness\", fontsize=10)\n",
+    "plt.plot(sorted_df['popularity'], sorted_df['energy'], color = 'yellow')\n",
+    "plt.title(\"Energy\", fontsize=10)\n",
     "\n",
     "plt.text(45,-0.2,\"Popularity\", ha=\"center\")\n",
-    "plt.suptitle(\"Example: Effects of Tempo, Loudness and Speechiness on Popularity\")\n",
+    "plt.suptitle(\"Example: Effects of Tempo, Loudness and Energy on Popularity\")\n",
     "plt.show()"
    ]
   },
