--- a/Spotify Analysis.ipynb
+++ b/Spotify Analysis.ipynb
@@ -877,46 +877,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c82ddd59",
-   "metadata": {},
-   "source": [
-    "How many artists, songs and are in the dataset?"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "id": "cf91210e",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "There is a total of 819 artists, 1840 songs and 15 genres in the dataset.\n"
-     ]
-    }
-   ],
-   "source": [
-    "artist = str(df['artist'].nunique())\n",
-    "song = str(df['song'].nunique()) \n",
-    "\n",
-    "# Since some songs have multiple genres, we need to separate them \n",
-    "# Getting rid of blank spaces \n",
-    "df['genre'] = df['genre'].str.replace(\" \", \"\")\n",
-    "\n",
-    "# Splitting strings \n",
-    "df['genre'] = df['genre'].str.split(\",\")\n",
-    "\n",
-    "# Separate genres\n",
-    "genres = df.explode('genre')\n",
-    "genre = str(genres['genre'].nunique())\n",
-    "\n",
-    "print(f\"There is a total of {artist} artists, {song} songs and {genre} genres in the dataset.\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "2539ec77",
    "metadata": {},
    "source": [
@@ -1264,6 +1224,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "4c7aeb2d",
+   "metadata": {},
+   "source": [
+    "When plotting the effects of loudness and energy on the popularity of songs, we an observe similarity of the curves to a certain degree. We interpret this as a correlation of these featues, which is supported by the heatmap down below."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 6,
    "id": "6d22e949",
@@ -1304,7 +1272,7 @@
     "plt.title(\"energy\", fontsize=10)\n",
     "\n",
     "plt.text(45,-0.2,\"Popularity\", ha=\"center\")\n",
-    "plt.suptitle(\"Example: Effects of Tempo, Loudness and Energy on Popularity\")\n",
+    "plt.suptitle(\"Example: Effects of Loudness and Energy on Popularity\")\n",
     "plt.show()"
    ]
   },
