--- a/SpotifyAnalysis.ipynb
+++ b/SpotifyAnalysis.ipynb
@@ -496,7 +496,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "9cc2fa52",
+   "id": "90169f44",
    "metadata": {},
    "outputs": [
     {
@@ -1600,6 +1600,47 @@
     "map = sns.heatmap(info, annot = True, fmt = '.1g', vmin=-1, vmax=1, center=0, cmap='Greens', linewidths=1, linecolor='White',square = False)\n",
     "map.set_title('Correlation of Variables')\n",
     "map.set_xticklabels(map.get_xticklabels(), rotation=90)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fd4d5f31",
+   "metadata": {},
+   "source": [
+    "Here you can try try out the similarity search:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "f219accc",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Welcome to Similarity Search:\n",
+      "Insert a song name in the input window, we will find you the five most similar songs to it.\n",
+      "\n",
+      "Do you want family-friendly songs? (y/n): n\n",
+      "Enter the name of the song: Breathe\n",
+      "The five most similar songs to >Breathe< are:\n",
+      "\n",
+      "                 song          artist                     genre\n",
+      "168   There You'll Be      Faith Hill              pop, country\n",
+      "1188      Just A Kiss          Lady A              pop, country\n",
+      "1906       Without Me          Halsey     pop, Dance/Electronic\n",
+      "94       I Wanna Know             Joe                  pop, R&B\n",
+      "998   Little Lion Man  Mumford & Sons  Folk/Acoustic, rock, pop\n",
+      "\n",
+      "Have fun listening!\n"
+     ]
+    }
+   ],
+   "source": [
+    "from similarity import similarity_search\n",
+    "similarity_search()"
    ]
   },
   {
