--- a/SpotifyAnalysis.ipynb
+++ b/SpotifyAnalysis.ipynb
@@ -496,7 +496,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "591b7698",
+   "id": "f073abc1",
    "metadata": {},
    "outputs": [
     {
@@ -1231,7 +1231,7 @@
    "id": "369d91bf",
    "metadata": {},
    "source": [
-    "### Top 10 Genres"
+    "### Distribution of Genres"
    ]
   },
   {
@@ -1582,7 +1582,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8fe98d3d",
+   "id": "cec51484",
    "metadata": {},
    "source": [
     "Here you can try try out the similarity search:"
@@ -1591,7 +1591,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "b9433e43",
+   "id": "b76d5787",
    "metadata": {},
    "outputs": [
     {
