--- a/SpotifyAnalysis.ipynb
+++ b/SpotifyAnalysis.ipynb
@@ -1410,7 +1410,7 @@
    "id": "27c25301",
    "metadata": {},
    "source": [
-    "You can use the featurePlot functions to see the correlation of one feature with the popularity of songs. Choose among the features included in the dataset and add into the function call."
+    "You can use the featurePlot functions to see the correlation of one feature with the popularity of songs. Choose among the features included in the dataset and add it into the function call."
    ]
   },
   {
