--- a/SpotifyAnalysis.ipynb
+++ b/SpotifyAnalysis.ipynb
@@ -1470,7 +1470,7 @@
    "id": "4c7aeb2d",
    "metadata": {},
    "source": [
-    "When plotting the effects of loudness and energy on the popularity of songs, we an observe similarity of the curves to a certain degree. We interpret this as a correlation of these featues, which is supported by the heatmap down below."
+    "When plotting the effects of loudness and energy on the popularity of songs, we an observe similarity of the curves to a certain degree. We interpret this as a correlation of these features, which is supported by the heatmap down below."
    ]
   },
   {
