--- a/SpotifyAnalysis.ipynb
+++ b/SpotifyAnalysis.ipynb
@@ -496,7 +496,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "f073abc1",
+   "id": "35775add",
    "metadata": {},
    "outputs": [
     {
@@ -1258,54 +1258,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b39245e8",
-   "metadata": {},
-   "source": [
-    "### Top Song each Year"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "id": "1ea13df1",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "year\n",
-      "2000    86\n",
-      "2001    78\n",
-      "2002    87\n",
-      "2003    81\n",
-      "2004    81\n",
-      "2005    82\n",
-      "2006    82\n",
-      "2007    80\n",
-      "2008    82\n",
-      "2009    82\n",
-      "2010    81\n",
-      "2011    82\n",
-      "2012    85\n",
-      "2013    89\n",
-      "2014    85\n",
-      "2015    86\n",
-      "2016    84\n",
-      "2017    85\n",
-      "2018    86\n",
-      "2019    85\n",
-      "Name: popularity, dtype: int64\n"
-     ]
-    }
-   ],
-   "source": [
-    "max_pop_per_year = df.groupby('year')['popularity'].max()\n",
-    "print(max_pop_per_year)\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "4fd3a86a",
    "metadata": {},
    "source": [
@@ -1410,7 +1362,7 @@
    "id": "27c25301",
    "metadata": {},
    "source": [
-    "You can use the featurePlot functions to see the correlation of one feature with the popularity of songs. Choose among the features included in the dataset and add it into the function call."
+    "You can use the featurePlot functions to see the correlation of one feature with the popularity of songs. Choose among the features included in the dataset and add into the function call."
    ]
   },
   {
@@ -1470,7 +1422,7 @@
    "id": "4c7aeb2d",
    "metadata": {},
    "source": [
-    "When plotting the effects of loudness and energy on the popularity of songs, we an observe similarity of the curves to a certain degree. We interpret this as a correlation of these features, which is supported by the heatmap down below."
+    "When plotting the effects of loudness and energy on the popularity of songs, we an observe similarity of the curves to a certain degree. We interpret this as a correlation of these featues, which is supported by the heatmap down below."
    ]
   },
   {
@@ -1582,7 +1534,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cec51484",
+   "id": "e0c57b02",
    "metadata": {},
    "source": [
     "Here you can try try out the similarity search:"
@@ -1591,7 +1543,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "b76d5787",
+   "id": "de30560f",
    "metadata": {},
    "outputs": [
     {
