--- a/SpotifyAnalysis.ipynb
+++ b/SpotifyAnalysis.ipynb
@@ -496,7 +496,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "35775add",
+   "id": "61d8dda1",
    "metadata": {},
    "outputs": [
     {
@@ -1159,6 +1159,39 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "0321fdaf",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Please choose a number corresponding to what you want to know: \n",
+      " 1. How many artists are in the dataset? \n",
+      " 2. How many songs are in the dataset? \n",
+      " 3. How many genres are in the dataset? \n",
+      "2\n",
+      "Please pick a number corresponding to what you want to know: \n",
+      " 1. How many songs are in the dataset? \n",
+      " 2. How many songs of a specific genre are in the dataset? \n",
+      " 3. How many songs of a specific artist are in the dataset? \n",
+      "2\n",
+      "['pop' 'rock' 'country' 'metal' 'hiphop' 'R&B' 'Dance/Electronic'\n",
+      " 'Folk/Acoustic' 'easylistening' 'latin' 'blues' 'set()'\n",
+      " 'World/Traditional' 'jazz' 'classical']\n",
+      "Please pick a genre out of the list: pop\n",
+      "There is a total of 1633 song(s) with genre pop in the dataset.\n"
+     ]
+    }
+   ],
+   "source": [
+    "from query import query\n",
+    "query(df)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "3bd3c0a2",
    "metadata": {},
@@ -1534,7 +1567,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e0c57b02",
+   "id": "1704657c",
    "metadata": {},
    "source": [
     "Here you can try try out the similarity search:"
@@ -1543,7 +1576,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "de30560f",
+   "id": "0b9f86e5",
    "metadata": {},
    "outputs": [
     {
